--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.3.3",
     "@remix-run/css-bundle": "^2.4.0",
     "@remix-run/express": "^2.4.0",
     "@remix-run/node": "^2.4.0",
     "@remix-run/react": "^2.4.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "ethers": "^6.7.1",
     "express": "^4.18.2",
     "isbot": "^3.6.8",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "source-map-support": "^0.5.21"
+    "siwe": "^2.1.4",
+    "source-map-support": "^0.5.21",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.4.0",
