--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethers": "^6.7.1",
     "express": "^4.18.2",
     "isbot": "^3.6.8",
+    "mongodb": "6.3",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
